fix z-index

--- a/Wardrobe/browseStyles.css
+++ b/Wardrobe/browseStyles.css
@@ -30,11 +30,6 @@ body {
   position: relative; 
 }
 
-body > *:not(.mist-overlay) {
-  position: relative;
-  z-index: 1;
-}
-
 #loader {
   height: 100vh;
   position: fixed;
